--- a/windows/Game/Game/Game.vcxproj
+++ b/windows/Game/Game/Game.vcxproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
@@ -20,14 +20,14 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>NotSet</CharacterSet>
-    <PlatformToolset>v110_xp</PlatformToolset>
+    <PlatformToolset>v140_xp</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
-    <PlatformToolset>v110</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
     <UseOfMfc>false</UseOfMfc>
     <CLRSupport>false</CLRSupport>
   </PropertyGroup>
@@ -60,8 +60,8 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>..\..\SDL\lib\x86;..\..\SDL_image\lib\x86;..\..\SDL_mixer\lib\x86;..\..\SDL_ttf\lib\x86;C:\Program Files %28x86%29\Visual Leak Detector\lib\Win32;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;SDL.lib;SDLmain.lib;SDL_image.lib;SDL_mixer.lib;SDL_ttf.lib;vld.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\..\SDL\lib\x86;..\..\SDL_image\lib\x86;..\..\SDL_mixer\lib\x86;..\..\SDL_ttf\lib\x86;vld\lib\Win32;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opengl32.lib;SDL.lib;SDLmain.lib;SDL_image.lib;SDL_mixer.lib;SDL_ttf.lib;vld/lib/win32/vld.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <IgnoreAllDefaultLibraries>false</IgnoreAllDefaultLibraries>
       <IgnoreSpecificDefaultLibraries>msvcrt.lib;%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
       <Profile>true</Profile>
@@ -98,6 +98,8 @@
     <None Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="app\Congratulations.cpp" />
+    <ClCompile Include="app\Ingame.cpp" />
     <ClCompile Include="clax\camera.cpp" />
     <ClCompile Include="clax\clax.cpp" />
     <ClCompile Include="clax\file_3ds.cpp" />
@@ -106,82 +108,74 @@
     <ClCompile Include="clax\quatern.cpp" />
     <ClCompile Include="clax\spline.cpp" />
     <ClCompile Include="clax\vector.cpp" />
-    <ClCompile Include="Congratulations.cpp" />
-    <ClCompile Include="dune\GameObject.cpp" />
-    <ClCompile Include="dune\gfx\Animation.cpp" />
-    <ClCompile Include="dune\gfx\FontTTF.cpp" />
-    <ClCompile Include="dune\gfx\FXManager.cpp" />
-    <ClCompile Include="dune\gfx\OGL.cpp" />
-    <ClCompile Include="dune\gfx\Particle2D.cpp" />
-    <ClCompile Include="dune\gfx\Particle2DManager.cpp" />
-    <ClCompile Include="dune\gfx\Popup.cpp" />
-    <ClCompile Include="dune\gfx\Screen.cpp" />
-    <ClCompile Include="dune\gfx\Sprite.cpp" />
-    <ClCompile Include="dune\gfx\SpriteObject.cpp" />
-    <ClCompile Include="dune\io\Datafile.cpp" />
-    <ClCompile Include="dune\io\GameSettings.cpp" />
-    <ClCompile Include="dune\io\HighScore.cpp" />
-    <ClCompile Include="dune\io\Profile.cpp" />
-    <ClCompile Include="dune\io\Unzip.cpp" />
-    <ClCompile Include="dune\io\Zip.cpp" />
-    <ClCompile Include="dune\math\Bezier.cpp" />
-    <ClCompile Include="dune\math\BSpline.cpp" />
-    <ClCompile Include="dune\math\Clamp.cpp" />
-    <ClCompile Include="dune\math\CRSpline.cpp" />
-    <ClCompile Include="dune\math\Hermite.cpp" />
-    <ClCompile Include="dune\math\HSV.cpp" />
-    <ClCompile Include="dune\math\SinTable.cpp" />
-    <ClCompile Include="dune\math\Tween.cpp" />
-    <ClCompile Include="dune\ui\Button.cpp" />
-    <ClCompile Include="dune\ui\Checkbox.cpp" />
-    <ClCompile Include="dune\ui\MobileKeyboard.cpp" />
-    <ClCompile Include="dune\ui\Mouse.cpp" />
-    <ClCompile Include="dune\ui\SpriteFont.cpp" />
+    <ClCompile Include="common\GameObject.cpp" />
     <ClCompile Include="Game.cpp" />
-    <ClCompile Include="Ingame.cpp" />
+    <ClCompile Include="gfx\Animation.cpp" />
+    <ClCompile Include="gfx\FontTTF.cpp" />
+    <ClCompile Include="gfx\FXManager.cpp" />
+    <ClCompile Include="gfx\Particle2D.cpp" />
+    <ClCompile Include="gfx\Particle2DManager.cpp" />
+    <ClCompile Include="gfx\Popup.cpp" />
+    <ClCompile Include="gfx\SpriteObject.cpp" />
+    <ClCompile Include="io\Datafile.cpp" />
+    <ClCompile Include="io\GameSettings.cpp" />
+    <ClCompile Include="io\HighScore.cpp" />
+    <ClCompile Include="io\Profile.cpp" />
+    <ClCompile Include="io\Unzip.cpp" />
+    <ClCompile Include="io\Zip.cpp" />
+    <ClCompile Include="math\Bezier.cpp" />
+    <ClCompile Include="math\BSpline.cpp" />
+    <ClCompile Include="math\Clamp.cpp" />
+    <ClCompile Include="math\CRSpline.cpp" />
+    <ClCompile Include="math\Hermite.cpp" />
+    <ClCompile Include="math\HSV.cpp" />
+    <ClCompile Include="math\SinTable.cpp" />
+    <ClCompile Include="math\Tween.cpp" />
+    <ClCompile Include="ui\Button.cpp" />
+    <ClCompile Include="ui\Checkbox.cpp" />
+    <ClCompile Include="ui\MobileKeyboard.cpp" />
+    <ClCompile Include="ui\Mouse.cpp" />
+    <ClCompile Include="ui\SpriteFont.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="app\Congratulations.h" />
+    <ClInclude Include="app\Ingame.h" />
     <ClInclude Include="clax\clax.h" />
     <ClInclude Include="clax\claxi.h" />
-    <ClInclude Include="Congratulations.h" />
-    <ClInclude Include="dune\GameObject.h" />
-    <ClInclude Include="dune\gfx\Animation.h" />
-    <ClInclude Include="dune\gfx\FontTTF.h" />
-    <ClInclude Include="dune\gfx\FXManager.h" />
-    <ClInclude Include="dune\gfx\OGL.h" />
-    <ClInclude Include="dune\gfx\Particle2D.h" />
-    <ClInclude Include="dune\gfx\Particle2DManager.h" />
-    <ClInclude Include="dune\gfx\Popup.h" />
-    <ClInclude Include="dune\gfx\Screen.h" />
-    <ClInclude Include="dune\gfx\Sprite.h" />
-    <ClInclude Include="dune\gfx\SpriteObject.h" />
-    <ClInclude Include="dune\io\Datafile.h" />
-    <ClInclude Include="dune\io\GameSettings.h" />
-    <ClInclude Include="dune\io\HighScore.h" />
-    <ClInclude Include="dune\io\Profile.h" />
-    <ClInclude Include="dune\io\Unzip.h" />
-    <ClInclude Include="dune\io\Zip.h" />
-    <ClInclude Include="dune\math\Bezier.h" />
-    <ClInclude Include="dune\math\BSpline.h" />
-    <ClInclude Include="dune\math\Clamp.h" />
-    <ClInclude Include="dune\math\CRSpline.h" />
-    <ClInclude Include="dune\math\Hermite.h" />
-    <ClInclude Include="dune\math\HSV.h" />
-    <ClInclude Include="dune\math\SinTable.h" />
-    <ClInclude Include="dune\math\Tween.h" />
-    <ClInclude Include="dune\math\Vec3.h" />
-    <ClInclude Include="dune\math\Vector.h" />
-    <ClInclude Include="dune\ui\Button.h" />
-    <ClInclude Include="dune\ui\Checkbox.h" />
-    <ClInclude Include="dune\ui\MobileKeyboard.h" />
-    <ClInclude Include="dune\ui\Mouse.h" />
-    <ClInclude Include="dune\ui\SpriteFont.h" />
+    <ClInclude Include="common\GameObject.h" />
     <ClInclude Include="Game.h" />
-    <ClInclude Include="Ingame.h" />
+    <ClInclude Include="gfx\Animation.h" />
+    <ClInclude Include="gfx\FontTTF.h" />
+    <ClInclude Include="gfx\FXManager.h" />
+    <ClInclude Include="gfx\Particle2D.h" />
+    <ClInclude Include="gfx\Particle2DManager.h" />
+    <ClInclude Include="gfx\Popup.h" />
+    <ClInclude Include="gfx\SpriteObject.h" />
+    <ClInclude Include="io\Datafile.h" />
+    <ClInclude Include="io\GameSettings.h" />
+    <ClInclude Include="io\HighScore.h" />
+    <ClInclude Include="io\Profile.h" />
+    <ClInclude Include="io\Unzip.h" />
+    <ClInclude Include="io\Zip.h" />
+    <ClInclude Include="math\Bezier.h" />
+    <ClInclude Include="math\BSpline.h" />
+    <ClInclude Include="math\Clamp.h" />
+    <ClInclude Include="math\CRSpline.h" />
+    <ClInclude Include="math\Hermite.h" />
+    <ClInclude Include="math\HSV.h" />
+    <ClInclude Include="math\SinTable.h" />
+    <ClInclude Include="math\Tween.h" />
+    <ClInclude Include="math\Vec3.h" />
+    <ClInclude Include="math\Vector.h" />
     <ClInclude Include="rapidxml\rapidxml.hpp" />
     <ClInclude Include="rapidxml\rapidxml_iterators.hpp" />
     <ClInclude Include="rapidxml\rapidxml_print.hpp" />
     <ClInclude Include="rapidxml\rapidxml_utils.hpp" />
+    <ClInclude Include="ui\Button.h" />
+    <ClInclude Include="ui\Checkbox.h" />
+    <ClInclude Include="ui\MobileKeyboard.h" />
+    <ClInclude Include="ui\Mouse.h" />
+    <ClInclude Include="ui\SpriteFont.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="resource.rc" />
